first Commmit dated 05/05/2020

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -97,7 +97,7 @@ dataSource:
     dialect: "hibernate.MyPostgreSQLDialect"
     driverClassName: org.postgresql.Driver
     username: postgres
-    password: "Independent12#"
+    password: 'stprksh123'
 
 environments:
     development:
