--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,7 +3,7 @@ userName=Administrator
 password=TqBSUdnqwoL0+JkRV+VxVw==
 #Put the location of the shared network folder
 #destination=\\src\\main\\resources\\upload\\
-destinationPath=\\src\\main\\webapps\\upload\\
+destinationPath=\\src\\main\\webapp\\upload\\
 #destinationPath=smb://10.10.1.127/ToolsUpload/Trisita/
 url=\\\\10.10.1.127\\ToolsUpload\\Trisita\\
 check.url=http://10.10.1.127/
