In discussion with Ankur,implementation of url change

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -88,7 +88,7 @@ endpoints:
 ---
                 server:
                         port: 8050
-                        contextPath: '/solutionsd/secured'
+                        contextPath: '/solutionsd/'
 ---
 security:
     coordinate:
